# libaria2-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE-MIT  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
aria2/: Cargo.toml
aria2-sys/: CMakeLists.txt  Cargo.toml  build.rs
aria2-sys/examples/: 01-session.rs  02-run.rs  03-add-uri.rs
aria2-sys/include/: DownloadHandleWrapper.hpp  aria2_bridge.hpp
aria2-sys/src/: aria2_bridge.cpp  lib.rs
aria2-sys/tests/: ffi.rs  ffi_mirror_tests.rs
aria2/src/: lib.rs  session.rs
examples/: 01-session.rs  02-run.rs  03-add-uri.rs  sample01.rs
include/: DownloadHandleWrapper.hpp  aria2_bridge.hpp
libaria2/: Cargo.toml
libaria2-sys/: .gitignore  Cargo.toml
libaria2-sys/examples/: add-uri.rs
libaria2-sys/include/: DownloadHandleWrapper.hpp  aria2_bridge.hpp
libaria2-sys/src/: aria2_bridge.cpp  lib.rs
libaria2-sys/tests/: ffi.rs  ffi_mirror_tests.rs
libaria2/examples/: simple.rs  simple_cli.rs
libaria2/src/: actions.rs  download_handle.rs  events.rs  lib.rs  session.rs
src/: aria2_bridge.cpp  lib.rs
tests/: ffi.rs  ffi_mirror_tests.rs
